// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group should render correctly 1`] = `
"<div><div role=\\"radiogroup\\" class=\\"nextui-radio-group\\"><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"1\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>1</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"false\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"2\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point mock\\"></span>2</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label></div><style>
        .nextui-radio-group {
          border: 0;
          margin: 0;
          padding: 0;
          display: flex;
          flex-direction: column;
          ;
        }
        .nextui-radio-group :global(.nextui-radio) {
          margin-top: calc(20px * 1);
          margin-right: 0;
          --radio-size: 20px;
        }
      </style><div role=\\"radiogroup\\" class=\\"nextui-radio-group\\"><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"1\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>1</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label><label class=\\"nextui-radio\\" aria-checked=\\"false\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"2\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point mock\\"></span>2</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label></div><style>
        .nextui-radio-group {
          border: 0;
          margin: 0;
          padding: 0;
          display: flex;
          flex-direction: row;
          ;
        }
        .nextui-radio-group :global(.nextui-radio) {
          margin-top: 0;
          margin-right: calc(20px * 1);
          --radio-size: 20px;
        }
      </style></div>"
`;

exports[`Radio Group should work correctly with different sizes 1`] = `
"<div><div role=\\"radiogroup\\" class=\\"nextui-radio-group\\"><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"1\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>1</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label></div><style>
        .nextui-radio-group {
          border: 0;
          margin: 0;
          padding: 0;
          display: flex;
          flex-direction: column;
          ;
        }
        .nextui-radio-group :global(.nextui-radio) {
          margin-top: calc(14px * 1);
          margin-right: 0;
          --radio-size: 14px;
        }
      </style><div role=\\"radiogroup\\" class=\\"nextui-radio-group\\"><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"1\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>1</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label></div><style>
        .nextui-radio-group {
          border: 0;
          margin: 0;
          padding: 0;
          display: flex;
          flex-direction: column;
          ;
        }
        .nextui-radio-group :global(.nextui-radio) {
          margin-top: calc(16px * 1);
          margin-right: 0;
          --radio-size: 16px;
        }
      </style><div role=\\"radiogroup\\" class=\\"nextui-radio-group\\"><label class=\\"nextui-radio\\" aria-checked=\\"true\\"><input type=\\"radio\\" tabindex=\\"-1\\" class=\\"nextui-radio-input mock\\" value=\\"1\\"><span class=\\"nextui-radio-name\\"><span tabindex=\\"0\\" class=\\"nextui-radio-point nextui-radio-active mock\\"></span>1</span><style>
        .nextui-radio-input {
          opacity: 0;
          overflow: hidden;
          width: 1px;
          height: 1px;
          top: -1000px;
          right: -1000px;
          position: fixed;
        }
        .nextui-radio {
          display: flex;
          width: initial;
          align-items: flex-start;
          position: relative;
          flex-direction: column;
          justify-content: flex-start;
          color: var(--nextui-color-text);
          cursor: pointer;
          --radio-size: 20px;
          ;
        }
        .nextui-radio-name {
          font-size: var(--radio-size);
          user-select: none;
          display: inline-flex;
          align-items: center;
        }
        .nextui-radio-point {
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          transition: all 0.25s ease;
          position: relative;
          display: inline-block;
          margin-right: calc(var(--radio-size) * 0.375);
        }
        .nextui-radio-point:after {
          content: '';
          display: block;
          position: absolute;
          width: var(--radio-size);
          height: var(--radio-size);
          border-radius: 50%;
          box-sizing: border-box;
          transition: all 0.25s ease;
          border: 2px solid var(--nextui-color-border);
        }
        .nextui-radio-point.nextui-radio-active:after {
          border: calc(var(--radio-size) * 0.34) solid var(--nextui-color-primary);
        }
        .nextui-radio:hover
          .nextui-radio-point:not(.nextui-radio-active):not(.nextui-radio-disabled) {
          background: var(--nextui-color-border);
        }
      </style></label></div><style>
        .nextui-radio-group {
          border: 0;
          margin: 0;
          padding: 0;
          display: flex;
          flex-direction: column;
          ;
        }
        .nextui-radio-group :global(.nextui-radio) {
          margin-top: calc(24px * 1);
          margin-right: 0;
          --radio-size: 24px;
        }
      </style></div>"
`;
